<resources>
    <string name="app_name">Chuck Jokes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_jokes_list">Jokes List</string>
    <string name="menu_local_jokes">My Jokes</string>
    <string name="menu_settings">Settings</string>

    <string name="button_share_title">Share</string>
    <string name="button_like_title">Like</string>
    <string name="action_share_title">Share</string>

    <string name="share_button_title">Share</string>
    <string name="like_button_title">Like</string>
    <string name="delete_button_title">Delete</string>


    <string name="chooser_share_title">Share</string>
    <string name="dialog_add_joke_label">Add new joke</string>

    <string name="dialog_add_joke_limit_pattern">%1$d / %2$d</string>
    <string name="settings_offline_mode_label">Offline mode</string>
    <string name="settings_last_name_hint">Character lastname</string>
    <string name="settings_first_name_hint">Character firstname</string>

    <string name="error_msg">Ops! Something went wrong!</string>

</resources>
