<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.jokesapplication.presentation.remote.JokesFragment"
        android:label="@string/menu_jokes_list"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_local_jokes"
        android:name="com.jokesapplication.presentation.local.LocalJokesFragment"
        android:label="@string/menu_local_jokes"
        tools:layout="@layout/fragment_local_jokes" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.jokesapplication.presentation.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>